Fix unload controller.

There is a race when suddenly added beforeunload handler during window
closing can lead to trashing TabRestoreService.
(Browser::OnWindowClosing can be called several times with subsets of
previously opened tabs)

BUG=692879

Review-Url: https://codereview.chromium.org/2695233003
Cr-Commit-Position: refs/heads/master@{#454192}

Former-commit-id: 65a0b3cdd8b7605020143b3a5f089dc0878bdbb3