chrome/browser/devtools/devtools_window.cc
@@ -770,7 +770,8 @@ bool DevToolsWindow::NeedsToInterceptBeforeUnload(
     WebContents* contents) {
   DevToolsWindow* window =
       DevToolsWindow::GetInstanceForInspectedWebContents(contents);
-  return window && !window->intercepted_page_beforeunload_;
+  return window && !window->intercepted_page_beforeunload_ &&
+         window->life_stage_ == kLoadCompleted;
 }
 
 // static
